fixed overflow for enquires and trigger-reports

--- a/website/css/common.css
+++ b/website/css/common.css
@@ -428,7 +428,6 @@ input:disabled {
 
 .modal .modal-content .action-container {
     max-height: 400px;  
-    overflow-y: auto;
     text-align: center;
 
 }
